nohup.out
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:8500/ (Press CTRL+C to quit)
127.0.0.1 - - [24/Mar/2024 22:12:08] "[37mGET / HTTP/1.1[0m" 200 -
  File "password-evolution.py", line 28
    conn.commit()
    ^
IndentationError: unexpected indent
  File "password-evolution.py", line 28
    conn.commit()
    ^
IndentationError: unexpected indent
  File "password-evolution.py", line 28
    conn.commit()
    ^
IndentationError: unexpected indent
  File "password-evolution.py", line 28
    conn.commit()
    ^
IndentationError: unexpected indent
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:8500/ (Press CTRL+C to quit)
127.0.0.1 - - [24/Mar/2024 22:45:59] "[37mPOST /signup/v1 HTTP/1.1[0m" 200 -
127.0.0.1 - - [24/Mar/2024 22:47:41] "[37mPOST /signup/v1 HTTP/1.1[0m" 200 -
127.0.0.1 - - [24/Mar/2024 22:47:58] "[37mPOST /signup/v1 HTTP/1.1[0m" 200 -
